Add first ML modeling notebook (Voting Ensemble) with cross-validation and Kaggle results

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,11 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 .virtual_documents/
+
+# Model binaries
+models/*.pkl
+models/*.joblib
+models/*.h5
+models/*.pt
+models/*.pth
+models/*.pytorch
